--- a/Modulo1/clase04/etiquetas multimedia/video.html
+++ b/Modulo1/clase04/etiquetas multimedia/video.html
@@ -4,6 +4,14 @@
 	<title></title>
 </head>
 <body>
-<video src="recursos/video.mp4"></video>
+	
+<video src="recursos/video.mp4" controls width="500px" poster="recursos/poster2.jpeg"></video>
+
+<video controls autoplay loop>
+	<source src="recursos/video.mp4" type="video/mp4">
+	<source src="recursos/video.ogg" type="video/ogg">
+	El navegador no es compatible con este componente
+</video>
+
 </body>
 </html>
