--- a/Modulo1/clase04/propiedades basicas/index.html
+++ b/Modulo1/clase04/propiedades basicas/index.html
@@ -18,9 +18,18 @@
 	</div>
 	<a href="http://www.google.com">click aquí</a>
 	<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</h2>
+	<h2 class="text2"></h2>
 
 
-	<p class="">precio anterior: S/<span class="precio">20.00</span></p>
+	<p class="texto texto-variante">precio anterior: S/<span class="precio">20.00</span></p>
+	<p class="texto">precio nuevo : S/30.00</p>
 
+
+	<p class="texto-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation <a href="">ullamco</a> laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </body>
 </html>
