--- a/Modulo2/clase02/ejercicio flex/index.html
+++ b/Modulo2/clase02/ejercicio flex/index.html
@@ -3,10 +3,13 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main-dist.css">
 </head>
 <body>
+<h1>Conociendo Flex</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 <div class="container">
+
 <div class="dado dado1">
 	
 	<div class="punto"></div>
