--- a/Modulo2/clase04/before,after/index.html
+++ b/Modulo2/clase04/before,after/index.html
@@ -6,12 +6,15 @@
 <body>
 	<h1 class="title-site">Title</h1>
 	<div class="box">
-
+	
 	<p>Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, </p>
 	</div>
 
 	<ul class="lista">
-		<li><img class="icono" src="https://cdn1.iconfinder.com/data/icons/ui-colored-3-of-3/100/UI_3_-20-512.png">Item</li>
+		<li>
+			<img class="icono" src="https://cdn1.iconfinder.com/data/icons/ui-colored-3-of-3/100/UI_3_-20-512.png">
+		Item
+	</li>
 		<li><img class="icono" src="https://cdn1.iconfinder.com/data/icons/ui-colored-3-of-3/100/UI_3_-20-512.png">Item</li>
 		<li><img class="icono" src="https://cdn1.iconfinder.com/data/icons/ui-colored-3-of-3/100/UI_3_-20-512.png">Item</li>
 		<li><img class="icono" src="https://cdn1.iconfinder.com/data/icons/ui-colored-3-of-3/100/UI_3_-20-512.png">Item</li>
