--- a/Modulo3/clase02/ejercicio jquery/index.html
+++ b/Modulo3/clase02/ejercicio jquery/index.html
@@ -2,25 +2,10 @@
 <html>
 <head>
 	<title></title>
-</head>
-<body>
-	<header class="header-site">
-		<h1>LOGO</h1>
-		<nav class="nav-site">
-			<ul>
-				<li>
-					Inicio
-				</li>
-				<li>Nostros</li>
-				<li>Contacto</li>
-			</ul>
-		</nav>
-	</header>
-
-</body>
-</html>
-
-<style type="text/css">
+	<style type="text/css">
+	*{
+		margin:0 auto;
+	}
 	.header-site{
 		width: 970px;
 		margin:0 auto;
@@ -41,8 +26,108 @@
 		justify-content: center;
 	}
 	.nav-site ul li{
-		margin:0px 20px;
+		margin:0px 0px;
 		list-style: none;
 		font-size: 20px;
+	padding: 20px;
+		/*padding: 20px;
+
+		transition: all 0.4s linear;*/
+	}
+
+	.activo{
+		background-color: red;
+		color: white;
+			
+	}
+
+	.modelo-menu{
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		background-color: red;
+		left:-3000px;
+		transition: all 0.4s linear;
+	}
+
+	.mostrar{
+		left:0;
+	}
+	.lista2{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	.lista2 li{
+		font-size: 40px;
+		margin-bottom: 30px;
 	}
 </style>
+</head>
+<body>
+	<div class="modelo-menu">
+		
+		<ul class="lista2">
+			<li id="el1">
+					Inicio
+				</li>
+				<li id="el2">Nostros</li>
+				<li id="el3">Contacto</li>
+				<li id="el4">Visión</li>
+				<li id="el5">Misión</li>
+
+		</ul>
+	</div>
+	<header class="header-site">
+		<h1 id="logo">LOGO</h1>
+		<nav class="nav-site">
+			<ul>
+				<li id="el1">
+					Inicio
+				</li>
+				<li id="el2">Nostros</li>
+				<li id="el3">Contacto</li>
+				<li id="el4">Visión</li>
+				<li id="el5">Misión</li>
+
+			</ul>
+		</nav>
+	</header>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript">
+	/*
+	$("#el1").click(function(){
+		$(".nav-site ul li").removeClass("activo");
+		$("#el1").addClass("activo");
+		
+	})
+	$("#el2").click(function(){
+		$(".nav-site ul li").removeClass("activo");
+		$("#el2").addClass("activo");
+	})
+	$("#el3").click(function(){
+		$(".nav-site ul li").removeClass("activo");
+		$("#el3").addClass("activo");
+	})
+	*/
+
+	$(".nav-site ul li").click(function(){
+		$(".nav-site ul li").removeClass("activo");
+		$(this).addClass("activo");
+	})
+
+	$("#logo").click(function()
+	{
+			$(".modelo-menu").addClass("mostrar");
+	})
+
+	$("#cerrar-modal").click(function(){
+			$(".modelo-menu").removeClass("mostrar");
+	})
+
+
+</script>
+</body>
+</html>
+
